# Pride

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Pride.sln  README.md  premake5.lua
Examples/: window.cpp
Pride/: Pride.vcxproj  Pride.vcxproj.filters
Pride/Headers/pride/: colour.h  content_loader.h  drawable.h  game.h  pride.h  renderer.h  texture.h  vec2.h
Pride/Headers/pride/components/: component.h  sprite.h
Pride/Headers/pride/entities/: entity.h  planet.h
Pride/Headers/pride/worlds/: universe.h  world.h
Pride/Source/: content_loader.cpp  drawable.cpp  game.cpp  renderer.cpp  texture.cpp
